# Semantic_Motion_Segmentation

./: README.md  color_to_label.m  compare_the_results.m  compute_flow.m  depth_only.m  flow_clustering.m  label_to_color.m  main.m  potentials_from_video.m  read_textonpotentials.m  write_textonpotential.m
ALE/: Makefile  ale  clustering.cpp  crf.cpp  dataset.cpp  dataset.h  filter.cpp  learning.cpp  main.cpp  potential.cpp  std.cpp  std.h
ALE/IL/: ilut.h
ALE/Kitti/Images/Left/: Thumbs.db
DeepFlow/: CMakeLists.txt  CMakeLists.txt~  ImageIOpng.h  deepflow  deepflow-static  deepflow.c  first.flo  io.c
densecrf/examples/: CMakeLists.txt  dense_inference  dense_inference.cpp  dense_inference_old  dense_inference_old.cpp
densecrf/src/: Makefile  cmake_install.cmake
spsstereo/: disp2dep.cpp  spsstereo
